src/styles.css
:root {
  --accent-color: #0ea5e9;
  --shadow-color: #a3a3a3;
}

* {
  margin: 0;
  box-sizing: border-box;
}

/* Header Styling */

header {
  display: flex;
  padding: 3%;
  padding-bottom: 0;
  position: relative;
}

header:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 500px;
  background-color: var(--accent-color);
  clip-path: polygon(0% 0%, 0% 87%, 200% 0%);
  z-index: -1;
}

.about-container {
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: 3%;
  padding-bottom: 1%;
  box-shadow: 1px 2px 6px 0 var(--shadow-color);
  background-color: white;
  z-index: 1;
}

.about-header {
  font-family: "Playfair Display", sans-serif;
  font-weight: lighter;
  font-size: 30px;
  padding-bottom: 3%;
}

.about-description {
  line-height: 1.5;
  padding-bottom: 5%;
  font-family: "Roboto", sans-serif;
  font-size: 14px;
}

.header-social-links {
  display: flex;
  justify-content: flex-end;
}

.header-link {
  font-size: 26px;
  padding: 1.5%;
}

.header-image {
  width: 30%;
}

/* Body Styling */

.work-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  padding: 3%;
  padding-top: 1%;
  gap: 5%;
  margin-bottom: 10%;
}

.work-header {
  font-family: "Playfair Display", sans-serif;
  padding-left: 3%;
  margin-top: 10%;
  font-size: 30px;
  font-weight: lighter;
}

.project {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.project-image {
  background-color: red;
  width: 100%;
  height: 150px;
}

.project-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 5%;
  padding-bottom: 0;
  font-family: "Playfair Display", sans-serif;
}

.project-bottom {
  box-shadow: 1px 2px 6px 0px var(--shadow-color);
}

.project-links-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 25%;
}

a {
  text-decoration: none;
}

.project-link {
  display: flex;
  align-items: center;
  justify-content: center;
}

.external-link {
  width: 18px;
}

.project-description {
  padding: 5%;
  padding-bottom: 20%;
  font-family: "Roboto", sans-serif;
  font-size: 12px;
}

/* Footer Styling */

footer {
  display: flex;
  justify-content: space-between;
  padding: 3%;
  background-color: var(--accent-color);
}

.contact-container {
  padding-right: 5%;
}

.contact-description,
.contact-header,
.contact-address,
.phone-info {
  padding: 3%;
  color: white;
  font-size: 14px;
  font-family: "Roboto", sans-serif;
}

.contact-header {
  font-family: "Playfair Display", sans-serif;
  font-weight: lighter;
  font-size: 30px;
}

.email-info,
.phone-info {
  display: flex;
  align-items: center;
  font-family: "Roboto", sans-serif;
}

.email-icon,
.phone-icon {
  width: 5%;
  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(180deg);
}

.email-info {
  color: white;
  font-size: 14px;
  padding-left: 3%;
}

.email,
.phone-num {
  padding-left: 10px;
}

.footer-social-links {
  padding-top: 10%;
  padding-left: 3%;
  color: white;
  font-size: 18px;
}

i {
  color: black;
}

.footer-link {
  font-size: 30px;
  text-decoration: none;
}

#footer-linkedin {
  padding: 5%;
}

.footer-image {
  width: 60%;
}

